[badges.appveyor]
repository = "kinggoesgaming/ore"

[badges.travis-ci]
repository = "pxlpowered/ore"

[dependencies]
chrono = "0.4"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
native-tls = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"

[features]
ore_v1 = []

[package]
authors = [
    "Adam Spofford <pieflavor.mc@gmail.com>",
    "Hunar Roop Kahlon <hunar.roop@gmail.com>"    
]
categories = ["api-bindings"]
description = "A library interacting with the Sponge Ore web API"
documentation = "https://docs.rs/ore/0.1.0"
exclude = ["appveyor.yml", "target", "version"]
keywords = ["ore", "sponge", "minecraft"]
license = "Apache-2.0/MIT"
name = "ore"
publish = false
readme = "README.md"
repository = "https://www.github.com/pxlpowered/ore"
# NOTE:
# * Change version in:
#   * documentation field
#   * lib.rs file
#   * version file
version = "0.1.0"